# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-check.yml  main.yml  pytests-check.yml  test.yml  tests_run.yml
gendiff/: __init_.py  cmd_parser.py  formatter.py  generate_diff.py  parser.py
gendiff/formatters/: common.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: file2-v3.json  result_json.txt  result_plain2.txt
